--- a/org.eclipse.linuxtools.lttng.headless/.classpath
+++ b/org.eclipse.linuxtools.lttng.headless/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/org.swtchart_0.6.0.v20090801.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
